--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.3",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
